# xtensor-signal

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  environment-dev.yml  xtensor-signalConfig.cmake.in
.github/workflows/: ghworkflow.yml  linux.yml  static-analysis.yml
include/xtensor-signal/: fft.hpp  find_peaks.hpp  lfilter.hpp  savitzky_golay.hpp  xtensor_signal.hpp
test/: CMakeLists.txt  fft_test.cpp  find_peaks_test.cpp  lfilter_test.cpp  savitzky_golay_test.cpp  test_config.cpp
test/test_data/: ecg.npz
